2004-02-05  Kentaro Sato <kentaro@ranvis.com>

	* timidity/smplfile.c:
	  Fixed bug with WAVE Sampler chunk without loop.

2004-02-05  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configs/Makefile.{am,in}:
	  Delete entry for msc-(twsyn-)interface.h
	* configs/msc-(twsyn-)interface.h: Remove
	* timidity/reverb.c: Fix typo

2004-02-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c: Add help message for --module
	* INSTALL(.ja), README(.ja): Beautify

2004-02-04  Saito <saito2@digitalme.com>

	* timidity/readmidi.c, timidity/timidity.c, timidity/playmidi.[ch]
	  timidity/reverb.[ch]:
	  Add --module=n option.
	  Rewrite Delay Effect.
	* timidity/output.[ch]:
	  Add some codes for 24-bit output.
	* interface/w32g_pref.h:
	  Fix around sampling-rate.

2004-02-04  mput <root@mput.dip.jp>

	* Makefile.am (dist-hook): delete
	* configs/Makefile.am (EXTRA_DIST): delete entry for msc-config.h
	* configs/msc-config.h{,.in}: remove

2004-02-04  mput <root@mput.dip.jp>

	* Makefile.am (dist-hook): Fix to preserve timestamp.

2004-02-03  Kentaro Sato <kentaro@ranvis.com>

	* timidity/timidity.c:
	  Fixed copybank bug.
	* timidity/instrum.[ch], timidity/readmidi.c:
	  Fixed problem freeing mapped banks.

2004-02-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.ujis/timidity.1,
	  doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5:
	  Beautify man pages
	* timidity/sndfont.c:
	  Hack up around set_rootkey() and set_rootfreq()

2004-02-03  Saito <saito2@digitalme.com>

	* timidity/mix.c, timidity/timidity.c, timidity/playmidi.[ch],
	  timidity/readmidi.c, timidity/reverb.c:
	  Change implementation of #extension timeout.
	  Fix some initializations.
	  Fix some free() functions.
	  Implement opt_default_module.
	  Fix timidity_pre_load_configuration().
	* interface/w32g_utl.c:
	  Fix bug about number of voices.

2004-02-02  Kentaro Sato <kentaro@ranvis.com>

	* timidity/instrum.c, timidity/timidity.c: